--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,9 @@
       content="AI Resume Matcher – Smart resume screening tool to instantly shortlist candidates based on job descriptions."
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <!-- <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" /> -->
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+
 
     <!-- ✅ Modern Font & Branding -->
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
